Fixed fileTable stretch

--- a/Arduino/data/styles.css
+++ b/Arduino/data/styles.css
@@ -202,7 +202,6 @@ input[type="radio"] {
 }
 
 .list{
-    display: flex;
     flex-grow: 1;
     min-height: 18vh;
     width: 100%;
